--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="./src/images/logo.png"
+            ><img id="logo" src="./src/images/logo.png"
           /></div>
     </nav>
 
